post cover change on small screen bugfix

--- a/public/blog/single-post-2/css/responsive.css
+++ b/public/blog/single-post-2/css/responsive.css
@@ -109,7 +109,7 @@
 	4. SLIDER
 	--------------------------------- */
 
-	.slider{ height: 400px; width: 100%; background-image: url(../../images/category-1.jpg); background-size: cover; }  
+	.slider{ height: 400px; width: 100%; background-image: url(/assets/images/bga.jpg); background-size: cover; }  
 
 
 	/* ---------------------------------
